styles/charadex.css
/* ... */
/* ============================================================= */
/* Plain Links
/* ============================================================= */

a,
a:visited {
  color: var(--cd-link-text-color);
  transition: color .2s ease-in-out;
}

a:hover,
a:focus,
a:active {
  color: var(--cd-link-text-color-hover);
  text-decoration: none;
}

/* ============================================================= */
/* Navbar
/* ============================================================= */
.navbar {
  background-color: var(--cd-navbar-background-color) !important;
  font-family: var(--cd-navbar-font-family) !important;
  z-index: 2000;
}

.navbar .navbar-brand {
  color: var(--cd-navbar-brand-color) !important;
  font-size: 2rem;
}

.navbar .navbar-brand:hover, 
.navbar .navbar-brand:focus {
  color: var(--cd-navbar-brand-color-hover) !important;
}

.navbar .navbar-nav .nav-link {
  color: var(--cd-navbar-link-color) !important;
}

.navbar .navbar-nav .nav-link:hover, 
.navbar .navbar-nav .nav-link:focus{
  color: var(--cd-navbar-link-color-hover) !important;

}

.navbar .navbar-toggler {
  color: var(--cd-navbar-link-color) !important;
  border: none !important;
}

.navbar .nav-link {
    display: flex;
    align-items: center;

}

.navbar .nav-link-icon {
    font-size: .5rem;
    margin-left: .25rem;
}


/* ============================================================= */
/* Dropdowns
/* This is for navbar dropdowns only
/* ============================================================= */

.navbar .dropdown-menu {
  color: var(--cd-navbar-dropdown-link-color) !important;
  background-color: var(--cd-navbar-dropdown-background-color) !important;
  border-radius: var(--cd-navbar-dropdown-border-radius) !important;
  border: none;
  margin-top: 0;
}

.dropdown:hover .dropdown-menu,
.dropdown-menu:hover{
  display: block !important
}

.navbar .dropdown-divider {
  border-top: 1px solid var(--cd-navbar-dropdown-divider) !important;
}

.navbar .dropdown-item,
.navbar .dropdown-item-text {
  color: var(--cd-navbar-dropdown-link-color) !important;
  transition: color .2s ease, background .2s ease;
}

.navbar .dropdown-item:hover, 
.dropdown-item:focus,
.dropdown-item:active {
  color: var(--cd-navbar-dropdown-link-color-hover)!important;
  background-color: var(--cd-navbar-dropdown-background-hover) !important;
}

.navbar .dropdown-header {
  color: var(--cd-navbar-dropdown-link-color-hover) !important;
}


/* ============================================================= */
/* Footer
/* ============================================================= */

.footer{
  background-color: var(--cd-footer-background-color) !important;
  color: var(--cd-footer-text-color) !important;
}

.footer a,
.footer a:visited {
  color: var(--cd-footer-link-color) !important;
}

.footer a:hover,
.footer a:focus,
.footer a:active {
  color: var(--cd-footer-link-color-hover) !important;
}


/* ============================================================= */
/* Pagination
/* ============================================================= */

.page-link {
  transition: color .2s ease, background .2s ease, border .2s ease;
  border-width: var(--cd-pagination-border-width) !important;
  border-style: var(--cd-pagination-border-style) !important;
}

.page-link,
.page-item.disabled .page-link {
  color: var(--cd-pagination-text-color) !important;
  background-color: var(--cd-pagination-background-color) !important;
  border-color: var(--cd-pagination-border-color) !important;
}

.page-item.active .page-link,
.page-link:hover,
.page-link:focus,
.page-link:active {
  color: var(--cd-pagination-text-color-hover) !important;
  background-color: var(--cd-pagination-background-hover) !important;
  border-color: var(--cd-pagination-border-color-hover) !important;
}

/* Keeps users from accidentally highlighting */
.page-link{
  cursor: pointer;
  user-select: none;
}

/* Fixes my jank nav/pagination hybrid */
.nav .pagination .page-item:first-child .page-link {
  border-radius: 0 !important;
  border-left: 0 !important;
}

.nav .pagination .page-item:last-child .page-link {
  border-radius: 0 !important
}

.nav .page-item:first-child .page-link {
  border-radius: var(--cd-pagination-border-radius) 0 0 var(--cd-pagination-border-radius) !important;
}

.nav .page-item:last-child .page-link {
  border-radius: 0 var(--cd-pagination-border-radius) var(--cd-pagination-border-radius) 0 !important
}


/* ============================================================= */
/* Card
/* ============================================================= */

.card {
  background-color: var(--cd-card-background-color) !important;
  border-width: var(--cd-card-border-width) !important;
  border-style: var(--cd-card-border-style) !important;
  border-color: var(--cd-card-border-color) !important;
  border-radius: var(--cd-border-radius) !important;
}

.card-header {
  background-color: var(--cd-card-header-background-color) !important;
  border-bottom-color: var(--cd-card-border-color) !important;
  border-bottom-width: var(--cd-card-border-width) !important;
  border-bottom-style: var(--cd-card-border-style) !important;
  font-family: var(--cd-card-header-font-family) !important;
  border-radius: calc(var(--cd-border-radius) - 1px) calc(var(--cd-border-radius) - 1px) 0 0 !important;
}


/* ============================================================= */
/* Buttons & Badges
/* ============================================================= */

.btn.btn-primary,
.badge.badge-primary {
  color: var(--cd-button-text-color) !important;
  background-color: var(--cd-button-background-color) !important;
  border-width: var(--cd-button-border-width) !important;
  border-style: var(--cd-button-border-style) !important;
  border-color: var(--cd-button-border-color) !important;
  border-radius: 0px;
}
/* ... */

